# mesh-decimation-openmesh

./: CMakeLists.txt  README.md  README.md.txt
MeshDecimator/: .gitignore  CMakeLists.txt  MeshDecimator.cpp  io_helper.cpp  io_helper.h  main.cpp
MeshDecimator/Headers/: Cost.h  Guards.h  Internals.h  MeshDecimator.h  MeshTypes.h  Placement.h
MeshDecimator/src/: Cost.cpp  Guards.cpp  Internals.cpp  Placement.cpp
